Maven running the test