@@ -14,14 +14,59 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.target>10</maven.compiler.target>
     <maven.compiler.source>10</maven.compiler.source>
+    <java.version>10</java.version>
+	<junit.jupiter.version>5.2.0</junit.jupiter.version>
+	<junit.platform.version>1.2.0</junit.platform.version>
   </properties>
 
   <dependencies>
-    <dependency>
-    	<groupId>org.junit.jupiter</groupId>
-    	<artifactId>junit-jupiter-engine</artifactId>
-    	<version>5.2.0</version>
-    	<scope>test</scope>
-    </dependency>
+ 	<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter-engine</artifactId>
+		 		<version>5.2.0</version>
+		
+		<scope>test</scope>
+	</dependency>
+ 	<dependency>
+ 		<groupId>org.junit.vintage</groupId>
+ 		<artifactId>junit-vintage-engine</artifactId>
+ 		<version>5.2.0</version>
+ 	</dependency>
   </dependencies>
+    <build>
+    	<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+			        <compilerArgs>
+			            <arg>--add-modules</arg>
+			            <arg>jdk.incubator.httpclient</arg>
+			        </compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.21.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.junit.platform</groupId>
+						<artifactId>junit-platform-surefire-provider</artifactId>
+						<version>${junit.platform.version}</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+		          <useSystemClassLoader>false</useSystemClassLoader>
+		          		<argLine>
+							--add-modules jdk.incubator.httpclient
+						</argLine>
+		          
+		        </configuration>
+				
+			</plugin>
+	    </plugins>
+  	</build>
+  
 </project>
